# local-data-stack

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  k8s-deployment.yaml  k8s_deploy.py  profile_parquet_data.py  pyproject.toml  test_performance.py  test_rbac.py  test_rill_integration.py  test_uat.py
.github/: CODEOWNERS  WORKFLOWS.md  dependabot.yml
.github/rulesets/: README.md  all-branches-protection.json  main-branch-protection.json
.github/scripts/: apply-rulesets.sh
.github/workflows/: sync.yml  test.yml
.opencode/: instructions.md
.opencode/skills/rill-agentic-patterns/: SKILL.md
.opencode/skills/rill-dashboards/: SKILL.md
.opencode/skills/rill-metrics-view/: SKILL.md
archive/: README.md
archive/azure/: setup.sh  sync.yml
archive/ci/: build-push.yml
archive/docker-stack/oss_framework-docker/: README.md
archive/k8s/: k8s_deploy.py
archive/k8s/oss_framework-k8s-archived/: README.md
archive/monitoring/oss_framework-monitoring/: README.md
archive/postgres-stack/: README.md
archive/templates/package_templates/: README.md
archive/templates/pipeline_templates/: README.md
data/cde_raw/: README.md
docs/: PHASE4A_DATA_MODEL_DESIGN.md  dbguideacad25.docx  dbguidechron25.docx  dbguideelp25.docx  dbguideintro25.docx  handoff-pr17-fix-form.md  known-issues-rill-metrics-gap.md
docs/superpowers/plans/: 2026-05-18-local-first-archival-implementation.md  2026-05-18-local-first-archival-second-pass-implementation.md  2026-06-17-data-deep-dive.md  2026-06-17-stage1-ingestion-implementation.md  2026-06-23-new-model-integration.md
docs/superpowers/specs/: 2026-05-18-local-first-archival-design.md  2026-05-18-local-first-archival-second-pass-design.md  2026-06-17-data-deep-dive-design.md  2026-06-17-stage1-ingestion-design.md
hackathonDocs/: DATA_RESEARCH.md  DEPLOY.md  EXPANSION_PLAN.md  HACKATHON_PLAN_V2.md  HANDOFF.md  Hugging FaceBuildSmallHackathonplan.md  INTEGRATION_PLAN.md  PLAN.md  PROJECT.md  README.md  SESSION_LOG.md  SPEC_query-history-dashboards.md  TRAINING_PLAYBOOK.md  session-ses_145f.md
local_data_stack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
models/: README.md
nl_query/: app.py  data_engine.py  eval.py  model_inference.py  prompts.py  ui_strings.py
nl_query/tests/: conftest.py  test_data_engine.py  test_eval_harness.py  test_execution_guard.py  test_gradio_e2e.py  test_model_inference.py
oss_framework/: OPERATIONAL_RUNBOOKS.md  PRODUCTION_DEPLOYMENT.md  STAFF_TRAINING.md  __init__.py  cli.py  pytest.ini  requirements.txt
oss_framework/config/: duckdb_config.py
oss_framework/connectors/: __init__.py  aeries.py  base.py
oss_framework/connectors/mappings/: aeries_to_canonical.py
oss_framework/dbt/: STAGE2B_PRIVACY_DESIGN.md  STAGE3_OPTIMIZATION.md  dbt_project.yml  profiles.yml
oss_framework/dbt/macros/: README.md  cde_dashboard_groups.sql  cde_reporting_category.sql  check_k_anonymity.sql  hash_pii.sql  hash_pii_secure.sql  mask_address.sql  mask_email.sql  mask_name.sql  mask_phone.sql
oss_framework/docker/: README.md
oss_framework/k8s-archived/: 01-postgres-statefulset.yaml
oss_framework/metadata/: README.md  metadata_combined.csv  schema_courses.csv  schema_students.csv
oss_framework/package_templates/: README.md
oss_framework/pipelines/: __init__.py  aeries_dlt_pipeline.py  aeries_to_parquet.py  cde_data_pipeline.py  excel_imports_dlt_pipeline.py
oss_framework/scripts/: README.md  config.py  create_stage1_tables.py  data_quality.py  import_d_and_f_report.py  import_demographic_data.py  ingest_aeries_data.py  logging_config.py  run_stage1_ingestion.py  run_week1_orchestrator.py  setup_week1_automated.sh  stage1_generate_sample_parquet.py  sync_raw_views_from_stage1.py  sync_raw_views_from_stage1_with_mapping.py  validate_preimplementation.py
oss_framework/tests/: README.md  conftest.py  test_batch_processing.py  test_data_transformations.py  test_education_validation.py  test_public_release_sanitization.py  test_stage1_dlt_pipelines.py
oss_framework/utilities/: __init__.py  requirements.txt  retry_utils.py  setup.py
rill_project/: rill.yaml
rill_project/alerts/: data_freshness_alert.yaml  pipeline_health.yaml
rill_project/dashboards/: cde_chronic_absenteeism.yaml  cde_ela.yaml  cde_elpac.yaml  cde_suspension.yaml  chronic_absenteeism_risk.yaml  class_effectiveness.yaml  equity_outcomes_by_demographics.yaml  wellbeing_risk_profiles.yaml
rill_project/metrics/: cde_chronic_absenteeism.yaml  cde_ela.yaml  cde_elpac.yaml  cde_suspension.yaml
rill_project/models/: cde_chronic_absenteeism.yaml  cde_ela.yaml  cde_elpac.yaml  cde_suspension.yaml  chronic_absenteeism_risk.yaml  class_effectiveness.yaml  equity_outcomes_by_demographics.yaml  performance_correlations.yaml  wellbeing_risk_profiles.yaml
schema/: chronic_absenteeism_definition.json  class_effectiveness_definition.json  equity_outcomes_definition.json  performance_correlations_definition.json  wellbeing_risk_definition.json
scripts/: anonymize_aeries.py  export_to_rill.py  metrics_exporter.py  run_pipeline.py  schedule_pipeline.sh
scripts/contracts/: README.md  contract_tests.py  run_query_audit_phase2.sh
scripts/performance/: benchmark.py  duckdb_indexes.sql
src/db/: connection.py
training/: README.md  generate_pairs.py  modal_generate.py  training_schema.json
(+101 files in other folders)
