[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-data-stack"
version = "0.1.0"
description = "100% local education analytics stack with DuckDB, dbt, and Rill - no cloud dependencies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Frank Lucido", email = "frank@flucido.com"}
]
keywords = ["education", "analytics", "student-data", "duckdb", "rill", "local-first"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

# Core dependencies (consolidated from requirements.txt files)
dependencies = [
    # Core Data Stack
    "duckdb>=0.9.0",
    "dbt-duckdb>=1.6.0",
    "dlt>=0.5.0",

    # Data Processing
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "deltalake>=0.10.0",

    # Database Connectors
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",

    # Web Framework (for API endpoints)
    "flask>=2.3.0",
    "fastapi>=0.100.0",

    # Orchestration
    # Orchestration (removed - using simple Python scripts)
    # Utilities
    "python-dotenv>=1.2.2",
    "pydantic>=2.0.0",
    "requests>=2.33.0",
    "tqdm>=4.65.0",

    # Security
    "cryptography>=48.0.1",
    "passlib>=1.7.0",
    # Constrain transitive urllib3 (via requests/dbt) to fix GHSA-qccp-gfcp-xxvc,
    # GHSA-mf9v-mfxr-j63j (header leak on redirect, decompression bomb).
    "urllib3>=2.7.0",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]

# Jupyter notebook support
jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.5.9",
    "jupyter-server>=2.20.0",
    "ipywidgets>=8.0.0",
]

# Natural-language query layer (nl_query/): Gradio UI + fine-tuned Qwen2.5
# NL→SQL model. Heavy ML deps, installed only when running the NL→SQL app.
nl-query = [
    "gradio>=6.15.0",
    "huggingface_hub>=0.26.0",
    "hf_transfer",
    "torch",
    "transformers>=4.46.0",
    "peft>=0.13.0",
    "bitsandbytes>=0.44.0",
    "accelerate>=1.0.0",
    # Local (no-GPU / product) inference backend
    "llama-cpp-python>=0.3.0",
    # Optional HF Spaces ZeroGPU helper (no-op locally)
    "spaces",
]

# All optional dependencies
all = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.5.9",
    "jupyter-server>=2.20.0",
    "ipywidgets>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/flucido/local-data-stack"
Documentation = "https://github.com/flucido/local-data-stack/tree/main/docs"
Repository = "https://github.com/flucido/local-data-stack"
Issues = "https://github.com/flucido/local-data-stack/issues"

# setuptools configuration
[tool.setuptools.packages.find]
where = ["."]
include = ["oss_framework*"]
exclude = ["tests*", "*.tests*"]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["oss_framework/tests", "."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=oss_framework --cov-report=term-missing --cov-report=xml"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# coverage configuration
[tool.coverage.run]
source = ["oss_framework"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true

# black configuration
[tool.black]
line-length = 100
target-version = ["py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
)/
'''

# ruff configuration (replaces flake8, isort, and more)
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["oss_framework"]

# mypy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# ── CLI entry points ──────────────────────────────────────────────────────
# pip install registers console_scripts that delegate to top-level scripts/

[project.scripts]
export-to-rill = "oss_framework.cli:export_to_rill"
